animate sun.svg and update with colorful weather icons

--- a/dev.html
+++ b/dev.html
@@ -12,7 +12,8 @@
     <div class="app">
       <div class="head current-forcast">
         <div>
-          <h5>Weather App</h5>
+          <h5>OZZY WEATHER APP</h5>
+          <br />
           <h3 class="name">Lagos, NG</h3>
         </div>
         <div class="block details">
@@ -30,13 +31,13 @@
               <i class="wi "></i>
               <span>Wind speed: <span class="wind-speed">0</span></span> <br />
               <i class="wi "></i>
-              <span>Ozone: <span class="ozone">0</span></span>
+              <span>Pressure: <span class="pressure">0</span></span>
             </div>
           </div>
         </div>
       </div>
       <div class="bottom daily-forcast">
-        <div class="name">
+        <div>
           <h5>DAILY FORCAST</h5>
         </div>
         <div id="output"></div>
