--- a/index.html
+++ b/index.html
@@ -6,31 +6,41 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Weather App</title>
     <link rel="stylesheet" href="css/weather-icons.min.css" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-      <div class="max-w-lg object-center card rounded overflow-hidden shadow-lg">
-        <div class="">
-          <h2 class="card-title name"></h2>
-          <small class="date"></small>
+    <div class="app">
+      <div class="head current-forcast">
+        <div>
+          <h5>OZZY WEATHER APP</h5>
+          <br />
+          <h3 class="name">Lagos, NG</h3>
         </div>
-        <div class="container">
-          <div class="">
-            <div class="">
-              <ul class="list-group">
-                <li class="list-group-item desc"></li>
-                <li class="list-group-item temp"></li>
-              </ul>
+        <div class="block details">
+          <div class="box">
+            <h3 class="temp"></h3>
+          </div>
+          <div class="flex">
+            <div class="box">
+              <i class="wi "></i>
+              <span>Conditions: <span class="desc">Summary</span></span> <br />
+              <i class="wi "></i>
+              <span>Humidity: <span class="hum">0</span></span>
             </div>
-            <div class="">
-              <ul class="list-group">
-                <li class="list-group-item">Humidity: <span class="hum"></span></li>
-                <li class="list-group-item ">Pressure: <span class="pressure"></span></li>
-                <li class="list-group-item ">Ozone: <span class="ozone"></span></li>
-              </ul>
+            <div class="box">
+              <i class="wi "></i>
+              <span>Wind speed: <span class="wind-speed">0</span></span> <br />
+              <i class="wi "></i>
+              <span>Pressure: <span class="pressure">0</span></span>
             </div>
           </div>
+        </div>
       </div>
+      <div class="bottom daily-forcast">
+        <div>
+          <h5>DAILY FORCAST</h5>
+        </div>
+        <div id="output"></div>
       </div>
     </div>
     <script src="app.js"></script>
